--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   data_table_2: ^2.6.0
   flutter_svg: ^1.1.6
   faker: ^2.2.0
+  shared_preferences: ^2.5.3
     
 
 dev_dependencies:
