--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: book_ease
 description: "Ang Book ko ay Book ng lahat"
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -30,13 +30,22 @@ dependencies:
   flutter_svg: ^1.1.6
   faker: ^2.2.0
   shared_preferences: ^2.5.3
-    
+  lucide_icons: ^0.257.0
+  json_annotation: ^4.8.1
+  pdf: ^3.10.8
+  excel: ^4.0.6
+  path_provider: ^2.1.2
+  open_file: ^3.3.2
+  universal_html: ^2.0.7
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
@@ -65,19 +74,20 @@ flutter:
     - assets/icons/info.svg
     - assets/icons/warning.svg
     - assets/icons/error.svg
-    
+    - assets/icons/email-send-password.png
+    - assets/icons/change_password.png
 
-# flutter:
+  # flutter:
   fonts:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
         - asset: assets/fonts/Poppins-Bold.ttf
+
           weight: 700
         - asset: assets/fonts/Poppins-ExtraBold.ttf
           weight: 800
 
-
-         
-
-        
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
