--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   open_file: ^3.3.2
   universal_html: ^2.0.7
   http: ^1.1.0
+  connectivity_plus: ^5.0.2
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
